add option for custom binaries on SUSE

--- a/ztc.conf
+++ b/ztc.conf
@@ -105,14 +105,6 @@ ZabbixFrontUrl =
 # LogFile =
 
 
-### Option: HostGroupName
-#
-#
-# Mandatory: no
-# Default: Vulners
-# HostGroupName =
-
-
 ### Option: HostsApplicationName
 #
 #
@@ -254,3 +246,35 @@ ZabbixFrontUrl =
 # Mandatory: no
 # Default: Vulners OS Report
 # TemplateApplicationName =
+
+
+### Option: HostGroupName
+#
+#
+# Mandatory: no
+# Default: Vulners
+# HostGroupName =
+
+
+### Option: TemplateGroupName
+#
+#
+# Mandatory: no
+# Default: Templates
+# TemplateGroupName =
+
+
+### Option: ZabbixGet
+#
+#
+# Mandatory: no
+# Default: zabbix_get
+# ZabbixGet =
+
+
+### Option: ZabbixSender
+#
+#
+# Mandatory: no
+# Default: zabbix_sender
+# ZabbixSender =
