--- a/ztc.conf
+++ b/ztc.conf
@@ -33,8 +33,8 @@ ZabbixApiPassword =
 #   The URL to the zabbix frontend, to access the Zabbix API
 #
 # Mandatory: no
-# Default: http://localhost
-ZabbixFrontUrl =
+# Default:
+# ZabbixFrontUrl = http://localhost
 
 
 ### Option: VerifySSL
@@ -43,24 +43,24 @@ ZabbixFrontUrl =
 #   True/False
 #
 # Mandatory: no
-# Default: True
-# VerifySSL =
+# Default:
+# VerifySSL = True
 
 
 ### Option: ZabbixServerFQDN
 #   The domain name (FQDN) of the zabbix-server, not the IP address.
 #
 # Mandatory: no
-# Default: localhost
-# ZabbixServerFQDN =
+# Default:
+# ZabbixServerFQDN = localhost
 
 
 ### Option: ZabbixServerPort
 #   The TCP-port of the zabbix-server.
 #
 # Mandatory: no
-# Default: 10051
-# ZabbixServerPort =
+# Default:
+# ZabbixServerPort = 10051
 
 
 ### Option: TrustedZabbixUsers
@@ -68,8 +68,8 @@ ZabbixFrontUrl =
 #   A list of usernames separated by commas.
 #
 # Mandatory: no
-# Default: Admin
-# TrustedZabbixUser =
+# Default:
+# TrustedZabbixUser = Admin
 
 
 ### Option: UseZabbixAgentToFix
@@ -77,204 +77,224 @@ ZabbixFrontUrl =
 #   True/False
 #
 # Mandatory: no
-# Default: True
-# UseZabbixAgentToFix =
+# Default:
+# UseZabbixAgentToFix = True
 
 
 ### Option: SSHUser
 #   A user who can connect to the target servers by ssh to execute fix commands
 #
 # Mandatory: no
-# Default: root
-# SSHUser =
+# Default:
+# SSHUser = True
 
 
 ### Option: WorkDir
 #
 #
 # Mandatory: no
-# Default: /opt/monitoring/zabbix-threat-control
-# WorkDir =
+# Default:
+# WorkDir = /opt/monitoring/zabbix-threat-control
 
 
 ### Option: LogFile
 #
 #
 # Mandatory: no
-# Default: /var/log/zabbix-threat-control.log
-# LogFile =
+# Default:
+# LogFile = /var/log/zabbix-threat-control.log
+
+
+### Option: DebugLevel
+#   Specifies debug level:
+#   0 - only error information
+#   1 - basic information
+#   2 - for debugging
+#
+# Mandatory: no
+# Default:
+# DebugLevel = 1
 
 
 ### Option: HostsApplicationName
 #
 #
 # Mandatory: no
-# Default: Vulnerabilities
-# HostsApplicationName =
+# Default:
+# HostsApplicationName = Vulnerabilities
 
 
 ### Option: DashboardName
 #
 #
 # Mandatory: no
-# Default: Vulners
-# DashboardName =
+# Default:
+# DashboardName = Vulners
 
 
 ### Option: ActionName
 #
 #
 # Mandatory: no
-# Default: Vulners
-# ActionName =
+# Default:
+# ActionName = Vulners
 
 
 ### Option: HostsHost
 #
 #
 # Mandatory: no
-# Default: vulners.hosts
-# HostsHost =
+# Default:
+# HostsHost = vulners.hosts
 
 
 ### Option: HostsVisibleName
 #
 #
 # Mandatory: no
-# Default: Vulners - Hosts
-# HostsVisibleName =
+# Default:
+# HostsVisibleName = Vulners - Hosts
 
 
 ### Option: BulletinsHost
 #
 #
 # Mandatory: no
-# Default: vulners.bulletins
-# BulletinsHost =
+# Default:
+# BulletinsHost = vulners.bulletins
 
 
 ### Option: BulletinsVisibleName
 #
 #
 # Mandatory: no
-# Default: Vulners - Bulletins
-# BulletinsVisibleName =
+# Default:
+# BulletinsVisibleName = Vulners - Bulletins
 
 
 ### Option: PackagesHost
 #
 #
 # Mandatory: no
-# Default: vulners.packages
-# PackagesHost =
+# Default:
+# PackagesHost = vulners.packages
+
 
 ### Option: PackagesVisibleName
 #
 #
 # Mandatory: no
-# Default: Vulners - Packages
-# PackagesVisibleName =
+# Default:
+# PackagesVisibleName = Vulners - Packages
 
 
 ### Option: StatisticsHost
 #
 #
 # Mandatory: no
-# Default: vulners.statistics
-# StatisticsHost =
+# Default:
+# StatisticsHost = vulners.statistics
 
 
 ### Option: StatisticsVisibleName
 #
 #
 # Mandatory: no
-# Default: Vulners - Statistics
-# StatisticsVisibleName =
+# Default:
+# StatisticsVisibleName = Vulners - Statistics
 
 
 ### Option: StatisticsMacrosName
 #
 #
 # Mandatory: no
-# Default: {$WORK_SCRIPT_CMD}
-# StatisticsMacrosName =
+# Default:
+# StatisticsMacrosName = {$WORK_SCRIPT_CMD}
 
 
 ### Option: StatisticsMacrosValue
 #
 #
 # Mandatory: no
-# Default: /opt/monitoring/zabbix-threat-control/ztc.py
-# StatisticsMacrosValue =
+# Default:
+# StatisticsMacrosValue = /opt/monitoring/zabbix-threat-control/scan.py
 
 
 ### Option: TemplateHost
 #
 #
 # Mandatory: no
-# Default: tmpl.vulners.os-report
-# TemplateHost =
+# Default:
+# TemplateHost = tmpl.vulners.os-report
 
 
 ### Option: TemplateVisibleName
 #
 #
 # Mandatory: no
-# Default: Template Vulners OS-Report
-# TemplateVisibleName =
+# Default:
+# TemplateVisibleName = Template Vulners OS-Report
 
 
 ### Option: TemplateMacrosName
 #
 #
 # Mandatory: no
-# Default: {$REPORT_SCRIPT_PATH}
-# TemplateMacrosName =
+# Default:
+# TemplateMacrosName = {$REPORT_SCRIPT_PATH}
 
 
 ### Option: TemplateMacrosValue
 #
 #
 # Mandatory: no
-# Default: /opt/monitoring/os-report/report.py
-# TemplateMacrosValue =
+# Default:
+# TemplateMacrosValue = /opt/monitoring/os-report/report.py
 
 
 ### Option: TemplateApplicationName
 #
 #
 # Mandatory: no
-# Default: Vulners OS Report
-# TemplateApplicationName =
+# Default:
+# TemplateApplicationName = Vulners OS Report
 
 
 ### Option: HostGroupName
 #
 #
 # Mandatory: no
-# Default: Vulners
-# HostGroupName =
+# Default:
+# HostGroupName = Vulners
 
 
 ### Option: TemplateGroupName
 #
 #
 # Mandatory: no
-# Default: Templates
-# TemplateGroupName =
+# Default:
+# TemplateGroupName = Templates
 
 
 ### Option: ZabbixGet
 #
 #
 # Mandatory: no
-# Default: zabbix_get
-# ZabbixGet =
+# Default:
+# ZabbixGet = zabbix_get
 
 
 ### Option: ZabbixSender
 #
 #
 # Mandatory: no
-# Default: zabbix_sender
-# ZabbixSender =
+# Default:
+# ZabbixSender = zabbix_sender
+
+
+### Option: MinCVSS
+#
+#
+# Mandatory: no
+# Default:
+# MinCVSS = 1
