--- a/ztc.conf
+++ b/ztc.conf
@@ -69,7 +69,7 @@ ZabbixApiPassword =
 #
 # Mandatory: no
 # Default:
-# TrustedZabbixUser = Admin
+# TrustedZabbixUsers = Admin
 
 
 ### Option: UseZabbixAgentToFix
