Update config. Add VulnersProxyHost options

--- a/ztc.conf
+++ b/ztc.conf
@@ -29,6 +29,14 @@ ZabbixApiPassword =
 
 
 [OPTIONAL]
+### Option: VulnersProxyHost
+#   The URL to Vulners Proxy host
+#
+# Mandatory: no
+# Default:
+# VulnersProxyHost = https://vulners.com
+
+
 ### Option: ZabbixFrontUrl
 #   The URL to the zabbix frontend, to access the Zabbix API
 #
